--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://marcopacini.github.io/"
+baseURL = "https://marcopacini.github.io/"
 languageCode = "en-us"
 title = ":alien: MP's Blog"
 
