--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "MP's Blog"
 
 theme = "hugo-paper"
 enableEmoji = true
+googleAnalytics = "UA-107568087-1"
 
 [taxonomies]
     tag = "tags"
